fix fonts on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,6 @@
 :root,
 body,
 html {
-  font-family: "Montserrat", Helvetica, sans-serif;
   background-color: white;
   margin: 0;
   padding: 0;
